Fix layout issue

--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -24,7 +24,7 @@
 }
 
 
-@media(max-width: 1535px){
+@media(max-width: 1535.6px){
     .container{
         display:none;
     }
